Primera release lista

--- a/app/src/main/res/layout/activity_juego.xml
+++ b/app/src/main/res/layout/activity_juego.xml
@@ -4,6 +4,368 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="pordefecto.parapam.JuegoActivity">
+    android:background="@drawable/fondot"
+    tools:context=".JuegoActivity"
+    tools:layout_editor_absoluteY="73dp"
+    tools:layout_editor_absoluteX="0dp">
+
+    <Button
+        android:id="@+id/button_infIzq"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="285dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="11dp"
+        android:layout_marginStart="24dp"
+        android:background="@android:color/transparent"
+        android:onClick="infIzq"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.811"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button_medio"
+        tools:ignore="RtlHardcoded"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <Button
+        android:id="@+id/button_medio"
+        android:layout_width="74dp"
+        android:layout_height="201dp"
+        android:layout_marginBottom="200dp"
+        android:background="@android:color/transparent"
+        android:onClick="medio"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.179"
+        tools:ignore="MissingConstraints"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <Button
+        android:id="@+id/button_infDer"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="285dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginStart="13dp"
+        android:background="@android:color/transparent"
+        android:onClick="infDer"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintLeft_toRightOf="@+id/button_medio"
+        app:layout_constraintRight_toRightOf="parent"
+        tools:ignore="RtlHardcoded"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1" />
+
+    <Button
+        android:id="@+id/button_supDer"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="79dp"
+        android:layout_marginEnd="22dp"
+        android:layout_marginLeft="13dp"
+        android:layout_marginRight="22dp"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="70dp"
+        android:background="@android:color/transparent"
+        android:onClick="supDer"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/button_infDer"
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintLeft_toRightOf="@+id/button_medio"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="RtlHardcoded"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+    <Button
+        android:id="@+id/button_supIzq"
+        android:layout_width="0dp"
+        android:layout_height="85dp"
+        android:layout_marginBottom="79dp"
+        android:layout_marginEnd="11dp"
+        android:layout_marginLeft="24dp"
+        android:layout_marginRight="11dp"
+        android:layout_marginStart="24dp"
+        android:layout_marginTop="70dp"
+        android:background="@android:color/transparent"
+        android:onClick="supIzq"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="@+id/button_infIzq"
+        app:layout_constraintHorizontal_bias="0.811"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toLeftOf="@+id/button_medio"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        tools:ignore="RtlHardcoded"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
+
+
+    <ImageView
+        android:id="@+id/arquero"
+        android:layout_width="68dp"
+        android:layout_height="178dp"
+        android:layout_marginBottom="175dp"
+        android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/arquerocentro"
+        app:layout_constraintBottom_toTopOf="@+id/pelota"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.671"
+        app:layout_constraintHorizontal_bias="0.501"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <ImageView
+        android:id="@+id/pelota"
+        android:layout_width="85dp"
+        android:layout_height="80dp"
+        android:layout_marginBottom="4dp"
+        android:layout_marginTop="8dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:src="@drawable/pelotasola"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_medio"
+        app:layout_constraintVertical_bias="0.928"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <ImageView
+        android:id="@+id/marca1"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="8dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        app:layout_constraintHorizontal_chainStyle="spread_inside"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.13"
+        android:layout_marginStart="8dp" />
+
+    <ImageView
+        android:id="@+id/marca2"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.18" />
+
+    <ImageView
+        android:id="@+id/marca3"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.219" />
+
+    <ImageView
+        android:id="@+id/marca4"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.261" />
+
+    <ImageView
+        android:id="@+id/marca5"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintHorizontal_bias="0.301" />
+
+    <ImageView
+        android:id="@+id/marca6"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.68" />
+
+    <ImageView
+        android:id="@+id/marca7"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.72" />
+
+    <ImageView
+        android:id="@+id/marca8"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.763" />
+
+    <ImageView
+        android:id="@+id/marca9"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.8" />
+
+    <ImageView
+        android:id="@+id/marca10"
+        android:layout_width="13dp"
+        android:layout_height="14dp"
+        android:adjustViewBounds="false"
+        android:scaleType="fitXY"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginTop="32dp"
+        android:layout_marginRight="8dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginLeft="8dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.84" />
+
+    <TextView
+        android:id="@+id/finPartida"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="44dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="4dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="44dp"
+        android:adjustViewBounds="false"
+        android:fontFamily="sans-serif"
+        android:lineSpacingExtra="36sp"
+        android:scaleType="fitXY"
+        android:text="PARTIDA FINALIZADA"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        android:textIsSelectable="false"
+        android:textSize="36sp"
+        android:textStyle="bold|italic"
+        android:translationY="150dp"
+        android:typeface="serif"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHorizontal_bias="0.529"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.576"
+        tools:text="PARTIDA FINALIZADA"
+        tools:layout_constraintTop_creator="1"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
+    <ImageView
+        android:id="@+id/indicador"
+        android:layout_width="25dp"
+        android:layout_height="27dp"
+        android:layout_marginBottom="175dp"
+        android:layout_marginTop="8dp"
+        android:scaleType="fitXY"
+        android:src="@drawable/indicador"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toTopOf="@+id/pelota"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.291"
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
 
 </android.support.constraint.ConstraintLayout>
