--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,41 +4,71 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/iniciojuego"
     tools:context="pordefecto.parapam.MainActivity">
 
     <LinearLayout
         android:layout_width="344dp"
         android:layout_height="503dp"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginTop="179dp"
         android:orientation="vertical"
-        tools:layout_editor_absoluteX="8dp"
-        tools:layout_editor_absoluteY="8dp">
+        app:layout_constraintHorizontal_bias="0.25"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
 
         <Button
             android:id="@+id/button_jugar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:fontFamily="serif"
             android:onClick="Jugar"
-            android:text="Jugar" />
+            android:text="Jugar"
+            android:textAllCaps="true"
+            android:textColor="@android:color/background_light"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button_ayuda"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:fontFamily="serif"
             android:onClick="irAyuda"
-            android:text="Ayuda" />
+            android:text="Ayuda"
+            android:textAllCaps="true"
+            android:textColor="@android:color/background_light"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button_silenciarMusica"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:fontFamily="serif"
             android:onClick="silenciarMusica"
-            android:text="Silenciar Musica" />
+            android:text="Silenciar Musica"
+            android:textAllCaps="true"
+            android:textColor="@android:color/background_light"
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/button_silenciarSonido"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:color/transparent"
+            android:fontFamily="serif"
             android:onClick="silenciarSonido"
-            android:text="Silenciar Sonido" />
+            android:text="Silenciar Sonido"
+            android:textAllCaps="true"
+            android:textColor="@android:color/background_light"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 </android.support.constraint.ConstraintLayout>
